add google test for Pool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.14)
 project(libshmpy)
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 
 find_package(pybind11 CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
+find_package(GTest CONFIG REQUIRED)
 
-include_directories(pybind11::headers spdlog_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
+include_directories(pybind11::headers spdlog_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include GTest::gtest)
 
 add_library(shmpy SHARED ${PROJECT_SOURCE_DIR}/src/wrapper.cxx)
 target_link_libraries(
@@ -13,18 +14,21 @@ target_link_libraries(
     PRIVATE
     pybind11::module
     pybind11::embed
-    spdlog::spdlog 
+    spdlog::spdlog
     spdlog::spdlog_header_only
+
     pthread
 )
 
-add_executable(shmpy_test ${PROJECT_SOURCE_DIR}/tests/main.cxx)
+add_executable(shmpy_test ${PROJECT_SOURCE_DIR}/tests/Test_Pool.cxx)
 target_link_libraries(
     shmpy_test
     PRIVATE
     pybind11::module
     pybind11::embed
-    spdlog::spdlog 
+    GTest::gtest
+    GTest::gtest_main
+    spdlog::spdlog
     spdlog::spdlog_header_only
     pthread
 )
