ndarray get and set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(pybind11 CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(GTest CONFIG REQUIRED)
 
-include_directories(pybind11::headers spdlog_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include GTest::gtest)
+include_directories(pybind11::headers spdlog_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/core ${PROJECT_SOURCE_DIR}/include/mem GTest::gtest)
 
 add_library(shmpy SHARED ${PROJECT_SOURCE_DIR}/src/wrapper.cxx)
 target_link_libraries(
@@ -16,13 +16,12 @@ target_link_libraries(
     pybind11::embed
     spdlog::spdlog
     spdlog::spdlog_header_only
-
     pthread
 )
 
-add_executable(shmpy_test ${PROJECT_SOURCE_DIR}/tests/Test_Pool.cxx)
+add_executable(TestCase_Pool ${PROJECT_SOURCE_DIR}/tests/Test_Pool.cxx)
 target_link_libraries(
-    shmpy_test
+    TestCase_Pool
     PRIVATE
     pybind11::module
     pybind11::embed
@@ -34,5 +33,17 @@ target_link_libraries(
 )
 
 
+add_executable(TestCase_Var ${PROJECT_SOURCE_DIR}/tests/Test_Var.cxx)
+target_link_libraries(
+    TestCase_Var
+    PRIVATE
+    pybind11::module
+    pybind11::embed
+    GTest::gtest
+    GTest::gtest_main
+    spdlog::spdlog
+    spdlog::spdlog_header_only
+    pthread
+)
 pybind11_extension(shmpy)
 pybind11_strip(shmpy)
