re-design with shm_kernel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,45 +4,20 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(pybind11 CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
-find_package(GTest CONFIG REQUIRED)
+find_package(Catch2)
 
-include_directories(pybind11::headers spdlog_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/core ${PROJECT_SOURCE_DIR}/include/mem GTest::gtest)
+add_subdirectory(shm_kernel)
 
-add_library(shmpy SHARED ${PROJECT_SOURCE_DIR}/src/wrapper.cxx)
+add_library(shmpy SHARED ./py_client.cxx ./py_server.cxx)
 target_link_libraries(
     shmpy
     PRIVATE
+    shm_kernel::shared_memory
+    shm_kernel::message_handler
+    shm_kernel::memory_manager
     pybind11::module
     pybind11::embed
     spdlog::spdlog
-    spdlog::spdlog_header_only
-    pthread
-)
-
-add_executable(TestCase_Pool ${PROJECT_SOURCE_DIR}/tests/Test_Pool.cxx)
-target_link_libraries(
-    TestCase_Pool
-    PRIVATE
-    pybind11::module
-    pybind11::embed
-    GTest::gtest
-    GTest::gtest_main
-    spdlog::spdlog
-    spdlog::spdlog_header_only
-    pthread
-)
-
-
-add_executable(TestCase_Var ${PROJECT_SOURCE_DIR}/tests/Test_Var.cxx)
-target_link_libraries(
-    TestCase_Var
-    PRIVATE
-    pybind11::module
-    pybind11::embed
-    GTest::gtest
-    GTest::gtest_main
-    spdlog::spdlog
-    spdlog::spdlog_header_only
     pthread
 )
 pybind11_extension(shmpy)
