--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 project(libshmpy)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(pybind11 CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
@@ -8,7 +9,8 @@ find_package(Catch2)
 
 add_subdirectory(shm_kernel)
 
-add_library(shmpy SHARED ./py_client.cxx ./py_server.cxx)
+add_library(shmpy src/shmpy_impl.cxx)
+target_include_directories(shmpy PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(
     shmpy
     PRIVATE
