--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.14)
 
 find_package(Catch2 REQUIRED)
 add_executable(Test_PyServer ./cxx/Test_PyServer.cxx)
-target_link_libraries(Test_PyServer PRIVATE shmpy Catch2::Catch2)
+target_link_libraries(Test_PyServer PRIVATE shmpy_C++API Catch2::Catch2)
 
